# BusinessManagement

./: .coverage  README.md  coverage_report.txt  docker-compose.yaml  env_example  pyproject.toml
calendars/: urls.py  views.py
config/: settings.py  urls.py
evaluations/: admin.py  models.py  serializers.py  urls.py  views.py
evaluations/migrations/: 0001_initial.py
htmlcov/: class_index.html
meetings/: admin.py  models.py  serializers.py  urls.py  views.py
meetings/migrations/: 0001_initial.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
teams/: admin.py  models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py
tests/: tests_calendars.py  tests_evaluations.py  tests_meetings.py  tests_tasks.py  tests_teams.py  tests_users.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
